# linalg

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  glovecompare.py  gpt.py  or.py  pyproject.toml  requirements.txt  vectors.py  xor.py
ai_comps/: __init__.py  activations.py  attention.py  cache.py  normalization.py  positional.py  pytorch_encoder_decoder_transformer.py  tokenizers.py  transformer.py
checkpoints_np/: chars_gpt_meta.json
linalg/: __init__.py  benchmark_qr.py  eigen.py  elimination.py  matrix_functions.py  projections.py  qr.py  svd.py  utils.py
notebooks/: 01_activations.ipynb  02_normalization.ipynb  03_attention.ipynb  04_positional.ipynb
tests/: test_eigen.py  test_elimination.py  test_matrix_functions.py  test_projections.py  test_qr.py  test_svd.py
