###############################################################################
#  Project metadata (PEP 621)
###############################################################################
[project]
name = "linalg"
version = "0.1.0"
description = "Educational linear-algebra toolkit used in a transformer-from-scratch project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Brantleigh Bunting", email = "brantleigh.bunting@proton.me" },
]

dependencies = [
    "black==25.1.0",
    "cfgv==3.4.0",
    "click==8.2.1",
    "coverage==7.10.2",
    "datasets>=4.3.0",
    "distlib==0.4.0",
    "filelock==3.18.0",
    "identify==2.6.12",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.7",
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "numpy==1.26.4",
    "packaging==25.0",
    "pandas==2.3.1",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pre-commit==4.2.0",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "ruff==0.12.7",
    "scipy>=1.15.3",
    "six==1.17.0",
    "tabulate==0.9.0",
    "torch>=2.9.0",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "virtualenv==20.33.1",
]

classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "black", "isort", "mypy"]

[project.urls]
Repository = "https://github.com/BrantleighBunting/linalg"
Issues     = "https://github.com/BrantleighBunting/linalg/issues"

###############################################################################
#  Build back-end (PEP 517)
###############################################################################
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

###############################################################################
#  Setuptools configuration
###############################################################################
[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "__pycache__*"]

###############################################################################
#  Tool configs (pytest / black / isort / mypy)
###############################################################################
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["linalg"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["linalg"]
